fixes post merge